--- a/TinyStude-CPP-1장/1. Area of Application and Popularity.md
+++ b/TinyStude-CPP-1장/1. Area of Application and Popularity.md
@@ -1,8 +1,5 @@
-1강 Area of Application and Popularity
-___________________________________________________
 
-
-1. C++이 대중적인 이유
+## 1. C++이 대중적인 이유
 
 - 타 언어와 비교했을 때, 성능이 뛰어나다.
 - 퍼포먼스의 모든 측면을 프로그래머가 제어할 수 있도록 해준다.
@@ -15,17 +12,16 @@ ___________________________________________________
 - 생태계 : 디버거, 메모리 체커, 커버리지 도구, 정적 분석, 프로파일링 등과 같은 다양한 지원 도구가 있다.
 - 성숙성 : C++은 많은 소프트웨어 문제를 오래 해결하고 다루어 왔다. 내공이 쌓여있다.
 
-2. C++이 사용된 곳
+## 2. C++이 사용된 곳
 
 - OS, 컴파일러, 인공지능, 이미지 편집, 웹 브라우저, 고성능 컴퓨터, 임베디드 시스템, 웹 인덱싱, DB, 게임 등 다양한 곳에서 사용되었다.
 
 
-3. C++의 장점
+## 3. C++의 장점
 - 높은 수준의 퍼포먼스
-  -> N Body Simulation이라는 대규모 시뮬레이션에서 타 언어(Java, Node.js, Python3 등) 대비 짧은 실행시간을 보였다.
+	N Body Simulation이라는 대규모 시뮬레이션에서 타 언어(Java, Node.js, Python3 등) 대비 짧은 실행시간을 보였다.
 - 적은 메모리 사용
-  -> Neighbor-Joining과 글로벌 정렬 프로그램을 실행했을 때를 기준으로 한 메모리 사용량에서 타 언어 대비 적은 메모리 사용을 보였다.
+	Neighbor-Joining과 글로벌 정렬 프로그램을 실행했을 때를 기준으로 한 메모리 사용량에서 타 언어 대비 적은 메모리 사용을 보였다.
 - 높은 에너지 효율
 - 적은 탄소 배출
-
 
