--- a/2장 - Basic Concepts I - Fundamental Types/6일차.md
+++ b/2장 - Basic Concepts I - Fundamental Types/6일차.md
@@ -1,1 +1,16 @@
-- Conversion Rules | auto Declaration
+- Conversion Rules
+	- Implicit type conversion rules - 모든 연산 전에 순서대로 적용됩니다
+		- (A) Floating point promotion
+			- 부동형 (연산) 정수형 → 부동형
+		- (B) Implicit integer promotion
+			- small_integral_type:= int보다 작은 모든 부호/부호 없는 정수 유형
+			- small_integral_type (연산) small_integral_type → int
+		- (C) Size promotion
+			- 작은 타입 (연산) 큰 타입 → 큰 타입
+		- (D) Sign promotion
+			- 부호 유형 (연산) 부호 없는 유형 → 부호 없는 유형
+	- 32비트보다 작은 정수 데이터 유형은 서명 또는 부호 없는 경우 독립적으로 암시적으로 int 로 승격됩니다.
+- auto Declaration
+	- C++11 auto 키워드는 컴파일러가 (이니셜라이저에서) 변수 유형을 자동으로 추론하도록 지정합니다.
+	- 자동은 유지보수 및 복잡한 유형 정의를 숨기는 데 매우 유용할 수 있습니다.
+	- 반면에 유형 숨김으로 인해 과도하게 사용하면 코드 가독성이 떨어질 수 있습니다.
