--- a/2장 - Basic Concepts I - Fundamental Types/7일차.md
+++ b/2장 - Basic Concepts I - Fundamental Types/7일차.md
@@ -1,1 +1,20 @@
 - C++ Operators
+
+| Precedence | Operator                          | Description                                                  | Associativity |
+| ---------- | --------------------------------- | ------------------------------------------------------------ | ------------- |
+| 1          | a++ a--                           | Suffix/postfix increment and decrement                       | L to R        |
+| 2          | +a -a ++a --a ! not ~             | Plus/minus, Prefix increment/ decrement, Logical/Bitwise Not | R to L        |
+| 3          | a * b a / b a % b                 | Multiplication, division, and remainder                      | L to R        |
+| 4          | a + b a - b                       | Addition and subtraction                                     | L to R        |
+| 5          | << >>                             | Bitwise left shift and right shift                           | L to R        |
+| 6          | < <= > >=                         | Relational operators                                         | L to R        |
+| 7          | == !=                             | Equality operators                                           | L to R        |
+| 8          | &                                 | Bitwise AND                                                  | L to R        |
+| 9          | ^                                 | Bitwise XOR                                                  | L to R        |
+| 10         | \|                                | Bitwise OR                                                   | L to R        |
+| 11         | && and                            | Logical AND                                                  | L to R        |
+| 12         | \|\| or                           | Logical OR                                                   | L to R        |
+| 13         | += -= * = /= %= <<= >>= &= ^= \|= | Compound                                                     | R to L        |
+- Precedence
+	- Unary binary operators
+	- Standard math operators
