--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/12일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/12일차.md
@@ -1,2 +1,24 @@
-
-- IEEE Floating-point Standard and Other Representations
+- Normal/Denormal
+	- Normal number
+		- 지수에 하나 이상의 비트가 설정되어 있거나 분모가 모두 0인 부동 소수점 값입니다.
+	- Denormal
+		- 부동 소수점 산술에서 비정규 숫자는 0 주변의 언더플로 간격을 채웁니다. 
+		- 가장 작은 정규수보다 크기가 작은 0이 아닌 숫자는 모두 비정규수입니다.
+		- 실수란 지수는 모두 0으로 표현할 수 있지만 분모가 0이 아닌 부동 소수점 값입니다.
+![[Pasted image 20240318112112.png]]
+- Infinity
+	- IEEE754 표준에서 inf(무한대 값)는 표현 가능한 최대(또는 최소) 값을 초과하는 숫자 데이터 유형 값입니다.
+	- Operations generating inf
+		- • ±∞·±∞  
+		- ±∞ · ±finite value  
+		- finite value op finite value > max value
+		- non-NaN/±0
+	- There is a single representation for +inf and -inf
+- NaN - Not a Number
+	- IEEE754 표준에서 NaN(숫자가 아님)은 정의되지 않았거나 표현할 수 없는 값을 나타내는 숫자 데이터 유형 값입니다.
+	- Operations generating NaN
+		- Operations with a NaN as at least one operand
+		- ±∞·∓∞,0·∞  
+		- 0/0,∞/∞  
+		- √x,log(x)forx<0
+		- sin−1(x),cos−1(x) for x < −1 or x > 1
