--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Integral Data Types/10일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Integral Data Types/10일차.md
@@ -1,1 +1,7 @@
-- Promotion, Truncation
+- Undefined Behaviour
+	- 범위보다 큰 값으로 정수를 초기화하는 것은 정의되지 않은 동작입니다.
+	- 부호 있는 정수형에 대한 비트 연산은 정의되지 않은 동작입니다
+	- 데이터 타입의 #비트보다 큰 시프트는 부호 없는 부호없는 경우에도 정의되지 않은 동작입니다.
+	- 암시적 변환에서 정의되지 않은 동작
+![[Pasted image 20240318110100.png]]
+	- Is the following loop safe?
