--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Integral Data Types/8일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Integral Data Types/8일차.md
@@ -1,3 +1,21 @@
-
-- Fixed Width Integers | size_t and ptrdiff_t
+- Fixed Width Integers
+	- They have the same size on any architecture
+		- int8-t, uint8_t
+		- int16_t, uint16_t
+		- int32_t, uint32 t 
+		- int64_t, uint64 t
+	- 기본 유형보다 Fixed Width Integers을 더 선호한다
+	- C++ 표준은 one-to-one mapping을 보장하지 않습니다
+		- 다섯 가지 기본 유형( char, short, int, long,long long)
+		- 네 가지 int* t 오버로드가 있습니다(int8 t, int16 t, int32 t, int64 t)
+			- int* t타입은 실제 타입이 아니라 적절한 기본 타입에 대한 정의입니다
+	- I/O 스트림은 uint8 t 및 int8 t를 정수 값이 아닌 문자로 해석합니다.
+- size_t and ptrdiff_t
+	- 현재 아키텍처에서 표현 가능한 가장 큰 값을 저장할 수 있는 별칭 데이터 유형입니다.
+		- size-t는 부호 없는 정수형(최소 16비트)입니다.
+		- ptrdiff_t는 포인터 차이를 계산하는 데 일반적으로 사용되는 size-t의 부호화된 버전입니다.
+		- size-t는 sizeof ()의 반환 유형이며 일반적으로 크기 측정값을 나타내는 데 사용됩니다.
+		- size-t / ptrdiff_t는 32비트 아키텍처에서는 4바이트, 64비트 아키텍처에서는 8바이트입니다.
+		- C++23은 sizet에 uz / UZ 리터럴을, ptrdiff_t에 z / Z를 추가합니다.
+ 
 
