13. Machine Epsilon , ULP 공부

--- a/TinyStudy-CPP-3장/12. Normal and Denormal , Infinity , NaN; Not a Number.md
+++ b/TinyStudy-CPP-3장/12. Normal and Denormal , Infinity , NaN; Not a Number.md
@@ -3,6 +3,7 @@
 ---
 
 * **정규값(Normal number)** : 적어도 1bit의 지수 혹은 모든 가수부가 0으로 표현될 수 있는 floating-point 값
+	* 유효숫자의 첫 자리를 1로 시작하도록 만든 값 (ex. 0.0123 --> 1.23 * 10^-2)
 
 * **비정규값(Denormal number)** : 지수부가 모두 0으로 표현되고, 가수부가 0이 아니게 표현되는 floating-point 값
 	* floating-point 연산에서 0 주위의 언더플로우 차이를 채우는 역할을 한다.
