--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/13일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/13일차.md
@@ -1,1 +1,13 @@
-- Machine Epsilon | ULP; Units at the Last Place
+- Machine Epsilon 
+	- Machine epsilon ε
+		- 1.0에 더하여 1이 아닌 다른 숫자가 될 수 있는 가장 작은 숫자로 정의됩니다.
+		- IEEE 754 Single precision : ε = 2^(−23) ≈ 1.19209 ∗ 10^(−7) 
+		- IEEE 754 Double precision : ε = 2^(−52) ≈ 2.22045 ∗ 10^(−16)
+- ULP; Units at the Last Place
+	- 연속된 부동소수점 숫자 사이의 간격
+	- ULP(p, e) = β^(e−(p−1)) → 2^(e−(p−1))
+	- Relation with ε
+		- ε = ULP(p, 0)  
+		- ULPx =ε ∗ β^(e(x))
+	- 실수의 부동 소수점 표현
+![[Pasted image 20240319141306.png]]
