--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/14일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/14일차.md
@@ -1,1 +1,18 @@
 - Cheatsheet
+![[Pasted image 20240319141510.png]]
+![[Pasted image 20240319141533.png]]![[Pasted image 20240319141546.png]]
+- Limits
+	- std::numeric_limits< T >::max();  //largest
+	- std::numeric_limits< T >::lowest();  //lowesr
+	- std::numeric_limits< T >::min();  //smallest
+	- std::numeric_limits< T >::denorm_min() // smallest (denormal) value
+	- std::numeric_limits< T >::epsilon(); //epsilon
+	- std::numeric_limits< T >::infinity() //infinity
+	- std::numeric_limits< T >::quiet_NaN() //NaN
+- 함수
+	- bool std::isnan(T value) // check if value is NaN  
+	- bool std::isinf(T value) // check if value is ±infinity 
+	- bool std::isfinite(T value) // check if value is not NaN and not ±infinity  
+	- bool std::isnormal(T value); // check if value is Normal
+	- T std::ldexp(T x, p) // exponent shift x ∗ 2p  
+	- int std::ilogb(T value) // extracts the exponent of value
