--- a/TinyStudy-CPP-3장/11. IEEE Floating-point Standard and Other Representations.md
+++ b/TinyStudy-CPP-3장/11. IEEE Floating-point Standard and Other Representations.md
@@ -23,6 +23,14 @@
 * 8 bit : E4M3 , E5M2
 
 
+### Floating-point 표현
+---
+$$ n = M * \beta^x => IEEE754 : 1.M*2^e$$
+* β : 기수(radix or base, 2진수의 경우 2, 10진수는 10)
+* p : 정밀도(precision)
+* e : 지수(exponent)
+* M : 가수부(Mentissa)
+
 ### 지수 편향(Exponent Bias)
 ---
 
