--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Issues/17일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Issues/17일차.md
@@ -1,1 +1,18 @@
-- Catastrophic Cancellation
+- Floating-point Comparison
+	- The problem
+		- cout << (0.11f + 0.11f < 0.22f); // true 
+		- cout << (0.1f + 0.1f > 0.2f); // true
+	- Do not use absolute error margins!!
+	- Problems
+		- 비교되는 숫자가 매우 작을 때  epsilon이 "작게 보이지만" 너무 커질 수 있는 문제 수정
+		- 비교되는 숫자가 매우 큰 경우, epsilon이 최소 반올림 오차보다 작아져 비교가 항상 거짓을 반환할 수 있습니다.
+	- Solution
+		- Use relative error
+			- |a - b| / b < ε
+	- Problems
+		- a=0, b=0 나눗셈은 0.0/0.0으로 평가되고 전체 if 문은 (난 < 에스필론)으로 항상 거짓을 반환합니다.
+		- b=0 나눗셈은 abs(a)/0.0으로 평가되고 전체 if 문은 (+인프 < 에스필론)으로 항상 거짓을 반환합니다.
+		- a와 b는 매우 작습니다. 결과는 참이어야 하지만 b로 나누면 잘못된 결과가 나올 수 있습니다.
+		- It is not commutative. 항상 b로 나눕니다.
+	- Solution
+		- |a - b| / max(|a|, |b|) <  ε
