--- a/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/15일차.md
+++ b/3장 - Basic Concepts II - Integral and Floating-point Types/Floating-point Types and Arithmetic/15일차.md
@@ -1,2 +1,28 @@
-- Arithmetic Properties | Detect Floating-point Errors
+- Arithmetic Properties (산술 규칙)
+	- ⊙ ∈ {⊕,⊖,⊗,⊘}
+	- op ∈ {+, −, ∗, /} denotes exact precision operations
+![[Pasted image 20240325110624.png]]
+- Detect Floating-point Errors
+	- C++11
+		- < cfenv >에 제공되는 부동 소수점 예외 기능을 사용하여 부동 소수점 예외 조건이 발생했는지 확인할 수 있습니다.
+			- FE_DIVBYZERO
+				- 0으로 나누기
+			- FE_INEXACT
+				- 반올림 오류
+			- FE_INVALID
+				- 유효하지 않은 연산, 즉 NaN
+			- FE_OVERFLOW
+				- 오버플로(포화 값 +inf에 도달)
+			- FE_UNDERFLOW
+				- 언더플로우(포화 값 -inf에 도달)
+			- FE_ALL_EXCEP
+				- 모든 예외
+			- std: :feclearexcept (FE_ALL_EXCEPT);
+				- 예외 상태 지우기
+			- std: :fetestexcept (‹macro>);
+				- 예외가 감지되면 != 0 값을 반환합니다.
+			- #pragma STDC FENV_ACCESS ON
+				- 컴파일러에 부동 소수점 환경을 조작하도록 지시합니다 (모든 컴파일러에서 지원되지 않음)
+				- gcc: yes, clang: no
+
 
