--- a/4장 - Basic Concepts III - Entities and Control Flow/18일차.md
+++ b/4장 - Basic Concepts III - Entities and Control Flow/18일차.md
@@ -1,2 +1,19 @@
+- Entities
+	- C++ 프로그램은 언어별 키워드(for, if, new, true 등), 식별자(변수, 함수, 구조, 네임스페이스 등의 기호), 연산자 시퀀스로 정의된 표현식, 리터럴(상수 값 토큰)로 구성된 집합입니다.
+	- C++ Entity
+		- 값, 객체, 참조, 함수, 열거자, 유형, 클래스 멤버, 템플릿 또는 네임스페이스를 말합니다.
+	- 식별자 및 사용자 정의 연산자는 Entities를 참조하는 데 사용되는 이름입니다.
+	- Entities는 표현식의 결과를 캡처하기도 합니다.
+	- 전처리기 매크로는 C++ Entities가 아닙니다.
+- Declaration 선언
+	- Prototype
+		- 유형과 속성을 설명하는 식별자가 있는 엔티티를 소개합니다.
+	- 선언은 컴파일러와 링커가 해당 식별자에 대한 참조(사용)를 수락하는 데 필요한 것입니다.
+	- Entities는 여러 번 선언할 수 있습니다. 모든 선언은 동일합니다.
+- Definition 정의
+	- Implementation 구현
+		- Entities Definition는 Declaration의 구현입니다. 
+		- 엔티티의 속성과 동작을 정의합니다.
+	- 각 엔티티에 대해 하나의 정의만 허용됩니다.
+- 구체적인 구현이 없는 선언은 불완전한 유형입니다 (as void)
 
-- Entities | Declaration and Definition
