--- a/4장 - Basic Concepts III - Entities and Control Flow/19일차.md
+++ b/4장 - Basic Concepts III - Entities and Control Flow/19일차.md
@@ -1,1 +1,24 @@
 - Enumerators
+	- enmu
+		- 열거자 열거형은 명명된 정수 상수 집합을 그룹화하는 데이터 유형입니다.
+	- enmu class
+		- 열거형 클래스(범위 열거형) 데이터 유형은 암시적으로 int로 변환할 수 없는 타입 안전 열거형입니다.
+	- enmu / enum class Features
+		- 비교 가능하다
+		- 자동으로 증가하는 순서로 열거됩니다.
+		- 별칭을 포함할 수 있다
+		- C++ 11
+			- 기본 유형을 설정할 수 있습니다.
+		- C++ 17
+			- enmu class
+				- 직접 목록 초기화 지원
+			- 지원 속성
+		- C++20
+			-  열거자 식별자를 로컬 범위에 도입하여 장황함을 줄일 수 있습니다
+		- Common Errors
+			- 항상 초기화 되어야 한다
+			- C++17
+				- 기본 유형의 열거형/열거형 클래스에 대해 범위를 벗어난 값에서 캐스팅하면 정의되지 않은 동작이 발생합니다.
+	- constexpr*
+		- C++ 17
+			- 표현식은 명시적인 기본 유형이 없는 (유일한) 열거형에 대해 범위를 벗어난 값을 허용하지 않습니다.
