--- a/4장 - Basic Concepts III - Entities and Control Flow/20일차.md
+++ b/4장 - Basic Concepts III - Entities and Control Flow/20일차.md
@@ -1,2 +1,18 @@
-- struct, Bitfield and union
+- struct
+	- 다양한 변수를 단일 단위로 집계합니다.
+	- 구조체 정의 뒤에 하나 이상의 변수를 선언할 수 있습니다.
+	- 열거자는 이름 없이 구조체 내에서 선언할 수 있습니다.
+	- 함수 범위와 같은 로컬 범위에서 구조체를 선언할 수 있습니다(일부 제한 사항 있음).
+	- Unnamed 구조체: 이름 없이 구조화되었지만 연관된 타입
+	- Anonymous 구조체: 이름과 타입이 없는 구조체
+	- C++ 표준은 Unnamed구조체를 허용하지만, C와 달리 Anonymous 구조체(즉, 이름이 없는 구조체)는 허용하지 않습니다.
+- Bitfield
+	- 미리 정의된 비트 폭을 가진 구조의 변수입니다. 
+	- 바이트 대신 비트를 저장할 수 있습니다.
+- union
+	- 서로 다른 데이터 유형을 동일한 메모리 위치에 저장할 수 있는 특수 데이터 유형입니다.
+	- 가장 큰 데이터 멤버를 저장하는 데 필요한 만큼만 큽니다.
+	- 일종의 "overlapping 중첩" 스토리지입니다.
+	- 구조체와 달리 C++는 익명 공용체를 허용합니다(즉, 이름이 없는 공용체) 
+	- C++17은 유형 안전 공용체를 나타내기 위해 std::variant를 도입했습니다.
 
