--- a/choiseonmun-tinycpp/Ch4 - Entities and Control Flow/05. Control Flow.md
+++ b/choiseonmun-tinycpp/Ch4 - Entities and Control Flow/05. Control Flow.md
@@ -10,3 +10,63 @@ A array[] = { { 1, 2 }, { 3, 4 }, { 5, 6 } };
 for (auto [x1, y1] : array)
 	cout << x1 << "," << y1 << " ";
 ```
+- C++17부터 `[[fallthrough]]` 특성을 이용할 수 있다.
+```cpp
+switch (x)
+{
+	case 'a':
+		// ...
+		[[fallthrough]]
+	case 'b':
+		// ...
+		break;
+}
+```
+- 제어문에 초기식을 사용할 수 있다.
+```cpp
+// #1 - C++17
+// if
+if (int ret = x + y; ret < 10)
+	cout << ret;
+
+// switch
+switch (auto i = f(); x)
+{
+	case 1: return i + x;
+}
+
+// #2 - C++20
+// range-based for
+for (int i = 0; auto x : { 'A', 'B', 'C'})
+	cout << i++ << ":" << x;
+```
+-  사용되지 않은 변수에 대해 `[[maybe_unused]]` 특성을 사용해 컴파일러 경고를 방지할 수 있다. (since C++17)
+```cpp
+int f(int value)
+{
+	[[maybe_unused]] int x = value;
+#if defined(ENABLE_SQUARE_PATH)
+	return x * x;
+#else
+	// static_cast<void>(x); # before C++17
+	return 0;
+#endif
+}
+
+template <typename T>
+int f([[maybe_unused]] T value)
+{
+	if constexpr (sizeof(value) >= 4)
+		return 1;
+	else
+		return 2;
+}
+
+template <typename T>
+int g([[maybe_unused]] T value)
+{
+	using R = decltype(value);
+
+	return R{};
+}
+```
