--- a/joojinsoo-tinycpp/Ch4. Basic Concepts III - Entities and Control Flow/4-2. Enumerators.md
+++ b/joojinsoo-tinycpp/Ch4. Basic Concepts III - Entities and Control Flow/4-2. Enumerators.md
@@ -89,3 +89,15 @@ Color my_color; // "my_color"는 RED, GREEN, BLUE 밖의 값일 수 있습니다
 enum Color : uint8_t { RED, GREEN, BLUE };
 Color value = 256; // 정의되지 않은 동작
 ```
+
+- C++17 에서는 명시적 기본 타입을 갖지 않는 enum에 constexpr 표현식이 범위 밖 값을 허용하지 않는다.
+```cpp
+enum Color { RED }; 
+enum Fruit : int { APPLE }; 
+enum class Device { PC };
+
+// constexpr Color a1 = (Color) -1; // 컴파일 오류
+const Color a2 = (Color) -1; // 정상
+constexpr Fruit a3 = (Fruit) -1; // 정상
+constexpr Device a4 = (Device) -1; // 정상
+```
