--- a/4장 - Basic Concepts III - Entities and Control Flow/Control Flow/21일차.md
+++ b/4장 - Basic Concepts III - Entities and Control Flow/Control Flow/21일차.md
@@ -1,1 +1,55 @@
-- if statement | for and while Loops | Range-based for Loop
+- if statement
+	- 지정된 조건이 true로 평가되면 첫 번째 분기를 실행하고, 그렇지 않으면 두 번째 분기를 실행합니다.
+```C++
+Short-circuiting:
+if (<true expression> r| array[-1] == 0) 
+... // no error!! even though index is -1
+    // left-to-right evaluation
+Ternary operator:
+<cond> ? <expression1> : <expression2>
+```
+- for and while Loops
+```c++
+for ([init]; [cond]; [increment]) { ... }
+
+while (cond) { ... }
+
+do { ... } while (cond);
+```
+	- Loop
+```c++
+C++ allows “in loop” definitions:
+
+for (int i = 0, k = 0; i < 10; i++, k += 2) ...
+
+Infinite loop:
+
+for (;;) // also while(true); ...
+
+Jump statements (break, continue, return):
+
+for (int i = 0; i < 10; i++) { 
+	if (<condition>)
+		break; // exit from the loop 
+	if (<condition>)
+		continue; // continue with a new iteration and exec. i++ 
+		return; // exit from the function
+}
+```
+- Range-based for Loop
+	- 기존 for 루프 구조의 복잡성을 간소화하기 위해 범위 기반 for 루프를 도입했습니다. 
+		- 값의 범위에서 작동하는 for 루프와 동일하지만 더 안전합니다.
+	- 범위 기반 for 루프는 사용자가 루프의 시작, 끝, 증분값을 지정할 필요가 없습니다.
+```c++
+for (int v : { 3, 2, 1 }) // INITIALIZER LIST 
+	cout << v << " "; // print: 3 2 1
+
+int values[] = { 3, 2, 1 };
+
+for (int v : values) cout<<v<<""; // print: 3 2 1
+for (auto c : "abcd") cout<<c<<"";// print: a b c d
+```
+- cases
+	- Fixed-size array int array[3] , "abcd"
+	- Branch Initializer List {1, 2, 3}  
+	- Any object with begin() and end() methods
