--- a/choihuiji-tinycpp/Ch4-Entities and Control Flow/3. struct, Bitfield and union.md
+++ b/choihuiji-tinycpp/Ch4-Entities and Control Flow/3. struct, Bitfield and union.md
@@ -65,3 +65,21 @@ struct S2 {
 ---
 ## union
 - 다양한 데이터 타입을 같은 메모리 위치에 저장할 수 있게 해주는 데이터 타입
+- 멤버 중 가장 큰 데이터 타입의 크기만큼만 메모리를 차지함
+```
+union A {
+	int x;
+	char y;
+}; // sizeof(A): 4
+
+A a;
+
+a.x = 1023; // bits: 00..000001111111111
+
+a.y = 0; // bits: 00..000001100000000
+
+cout << a.x; // print 512 + 256 = 768
+```
+- 리틀 엔디안 시스템에서는 값의 바이트가 메모리에 역순으로 배치되므로, y에 해당하는 바이트는 x의 값에서 가장 낮은 바이트(즉, 가장 오른쪽 바이트)를 차지함
+- C++에서는 이름 없는 유니온(anonymous union)을 허용
+- C++17부터는 std::variant를 도입하여 타입 안정성을 제공
