27일차 업데이트

--- a/choihuiji-tinycpp/Ch5-Memory Management/Initialization/1. Variable Initialization, Uniform Initialization.md
+++ b/choihuiji-tinycpp/Ch5-Memory Management/Initialization/1. Variable Initialization, Uniform Initialization.md
@@ -27,3 +27,40 @@ int b5 = {}; // 복사 리스트 초기화 (기본 생성자/제로 초기화)
 ```
 
 일관된 초기화 방식은 타입 간의 안전한 변환을 도와주고 암시적인 narrowing 변환, 즉 값 손실이 발생할 수 있는 변환을 방지한다. 이 초기화 방식의 문법은 현대적인 캐스트보다 더 간결하며, 초기화 중에 타입 안정성을 강화한다.
+```
+int b4 = -1; // ok
+int b5{-1}; // ok
+unsigned b6 = -1; // ok
+// unsigned b7{-1}; // compile error
+
+float f1{10e30}; // ok
+float f2 = 10e40; // ok, "inf" value
+// float f3{10e40}; // compile error
+```
+---
+## Array Initialization
+배열은 집합형(aggregate type)으로 분류되며, 중괄호 초기화 구문을 사용하여 초기화 할 수 있다. 이 구문은 또한 braced-init-list 또는 aggregate-initialization 이라고도 불린다.
+- 1차원 배열 초기화
+```
+int a[3] = {1, 2, 3}; // 명시적 크기 지정
+
+int b[] = {1, 2, 3}; // 암시적 크기 지정
+
+char c[] = "abcd"; // 암시적 크기 지정
+
+int d[3] = {1, 2}; // d[2] = 0 -> 기본값인 0으로 초기화
+
+int e[4] = {0}; // 모든 값이 0으로 초기화
+
+int f[3] = {}; // 모든 값이 0으로 초기화 (C++11)
+
+int g[3] {}; // 모든 값이 0으로 초기화 (C++11)
+```
+- 2차원 배열 초기화
+```
+int a[][2] = { {1, 2}, {3, 4}, {5, 6} }; // 명시적으로 모든 요소를 초기화
+int b[][2] = { 1, 2, 3, 4 }; // 2개의 요소씩 묶어 초기화
+
+// int c[][] = ...; 2번째 배열은 암시적으로 표현 불가
+// int d[2][] = ...; 2번째 배열은 암시적으로 표현 불가
+```
