Address-of Operator & 공부

--- a/TinyStudy-CPP-5장/29. Pointer Operation.md
+++ b/TinyStudy-CPP-5장/29. Pointer Operation.md
@@ -19,6 +19,9 @@
 * `*void` 타입을 다른 포인터로 형변환 할 경우에는 `static_cast`사용해도 됨.  (나머지는 안전 이유로 안됨.)
 ```cpp
 int* ptr1 = ...;
+void* ptr2 = ptr1; // int* -> void* 암시적 형변환
+
+int* ptr1 = ...;
 char* ptr2 = (char*) ptr1; // static_cast는 불가
 ```
 
