consteval, constinit, if constexpr 공부

--- a/TinyStudy-CPP-5장/33. constexpr.md
+++ b/TinyStudy-CPP-5장/33. constexpr.md
@@ -4,7 +4,7 @@
 
 * 표현식이 컴파일 타임에 평가될 수 있다는 의미로 `constexpr` 키워드를 사용한다.
 * 해당 키워드로 메모리 사용이나 컴파일 시간 등의 퍼포먼스에 이득이 될 수 있다.
-
+* `constexpr`는 `const`의 기능을 포함한다.
 * `constexpr` 변수는 항상 컴파일 시간에 측정된다.
 ```cpp
 const int v1 = 3; // 컴파일 타임에 평가됨
