--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/5. Initialization.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/5. Initialization.md
@@ -2,4 +2,39 @@
 ```cpp
 unsigned a{-1}; // Compile Error
 float f{10e40}; // Compile Error
+
+struct S
+{
+	unsigned x;
+	unsigned y;
+	void* ptr;
+};
+
+S s3{1, -2}; // Compile Error
+```
+
+- C++20부터 멤버 지정 초기화를 사용할 수 있다.
+```cpp
+struct A { int x, y, z; };
+A a1{
+	.x = 1,
+	.y = 2,
+	.z = 3
+};
+```
+- C++17부터 구조체 바인딩을 사용할 수 있다.
+```cpp
+struct A { int x = 1; int y = 2; } a;
+A f() { return A{4, 5}; }
+
+// # Case1 : struct
+auto[x1, y1] = a; // x1 = 1, y1 = 2
+auto[x2, y2] = f(); // x1 = 4, y1 = 5
+
+// # Case2 : raw arrays
+int b[2] = { 1, 2 };
+auto [x3, y3] = b;
+
+// # Case3 : tuples
+auto [x4, y4] = tuple<float, int>{3.0f, 2};
 ```
