--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/6. Pointer.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/6. Pointer.md
@@ -2,3 +2,11 @@
 - 모든 포인터 타입은 `void*`으로 변환된다.
 - `void`가 아닌 포인터 타입은 반드시 명시적으로 변환해야 한다.
 	- 단, `static_cast`로는 불가능하다.
+
+# 와일드 포인터, 댕글링 포인터
+```cpp
+int* ptr; // wild pointer
+
+int* array = new int[10];
+delete[] array; // dangling pointer
+```
