--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
@@ -5,3 +5,64 @@
 # const
 - 초기화 이후 변경할 수 없으며, 반드시 상수로 초기화해야 한다.
 - const 타입은 암시적으로 비 const 타입으로 변환되지 않는다.
+
+# constexpr
+- 컴파일 시간에 평가되는 식이다.
+- 메모리 사용과 성능을 향상한다.
+- 빌드 시간에 영향을 준다.
+## 변수
+- 컴파일 시간에 반드시 평가할 수 있어야 한다.
+```cpp
+int a = 3;
+const int v1 = a; // run-time evaluation
+constexpr int v2 = v1; // compile error
+```
+
+## 함수
+- 모든 인수가 컴파일 시간에 평가된다면 컴파일 시간에 실행되는 함수
+- C++ 11때는 단 하나의 반환문만 있어야 하고, 루프나 스위치가 없어야 했지만, C++ 14부터는 이러한 제약이 사라졌다.
+- 아래의 경우라면 무조건 실행 시간에 평가된다.
+	- 비 `constexpr` 함수를 포함하는 경우
+	- 실행 시간 전역 변수를 참조하는 경우
+- 한계
+	- try-catch, 예외, RTTI 와 같은 실행 시간 기능을 포함할 수 없다.
+	- goto, asm 구문을 포함할 수 없다.
+	- C++14 전까지는 `assert()`를 포함할 수 없었다.
+	- C++20 전까지는 가상 함수를 수식할 수 없었다.
+	- C++23 전까지는 정적 변수를 포함할 수 없었다.
+	- 미정의된 동작을 일으키는 코드를 넣을 수 없다.
+		- e.g. `reinterpret_cast`, signed integer overflow, unsafe usage of `union` 등
+```cpp
+constexpr int square(int value)
+{
+	return value * value;
+}
+
+square(4); // compile-time evaluation
+int a = 4;
+square(a); // run-time evaluation
+```
+
+- 멤버 함수를 수식할 경우 아래의 경우에 주의한다.
+```cpp
+struct A
+{
+	int v{ 3 };
+
+	// f()는 무조건 런타임에 실행된다.
+	// 데이터 멤버인 v를 사용하고 있기 때문이다.
+	// 이 외에도 런타임 함수를 사용하는 경우도 마찬가지다.
+	constexpr int f() const { return v; }
+
+	// g()는 컴파일 타임에 실행 가능하다.
+	// 정적 멤버 함수는 특정 인스턴스에 종속되지 않기 때문이다.
+	static constexpr int g() { return 3; }
+};
+
+A a1;
+constexpr int x = a1.f(); // compile error
+constexpr int y = a1.g(); // A::g();
+
+constexpr A a2;
+constexpr int x2 = a2.f(); // Ok. a2는 런타임 객체가 아니기 때문이다.
+```
