--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
@@ -66,3 +66,65 @@ constexpr int y = a1.g(); // A::g();
 constexpr A a2;
 constexpr int x2 = a2.f(); // Ok. a2는 런타임 객체가 아니기 때문이다.
 ```
+
+# consteval
+- since C++20
+- 컴파일 타임 평가를 보장하며, 런타임 값은 언제나 컴파일 오류를 일으킨다.
+```cpp
+consteval int square(int value)
+{
+	return value * value;
+}
+
+int v = 4;
+square(v); // compile error
+```
+
+# constinit
+- since C++20
+- 정적 변수에 대해 정적 초기화(Static Initialization)가 되어 있는지 단정한다. 실패하면 프로그램이 불완전한(ill-formed) 것이다.
+	- Zero Initialization, Constant Initialization
+```cpp
+int a = 10; // global
+constinit int v = a; // compile error
+const int v = a; // OK; but, error-prone
+```
+
+# if constexpr
+- since C++17
+- 컴파일 타임 술어에 기반해 코드를 조건부로 컴파일한다.
+```cpp
+auto f()
+{
+	if constexpr (sizeof(void*) == 8)
+		return "hello"; // const char*
+	else
+		return 3; // int
+}
+```
+- 주의할 점
+	- 명시적인 `if/else` 구문으로만 동작한다.
+	- `else if`도 `constexpr`여야 한다.
+```cpp
+auto f1()
+{
+	if constexpr (my_constexpr_fun() == 1)
+		return 1;
+	return 2; // compile error
+}
+
+auto f2()
+{
+	if constexpr (my_constexpr_fun() == 1)
+		return 1;
+	else if (my_constexpr_fun() == 2)
+		return 2.0; // compile error
+	else
+		return 3L;
+}
+```
+# 참고자료
+- https://en.cppreference.com/w/cpp/language/consteval
+- https://en.cppreference.com/w/cpp/language/constinit
+- https://en.cppreference.com/w/cpp/language/constexpr
+- https://en.cppreference.com/w/cpp/language/if
