--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/8. Constants, Literals.md
@@ -110,7 +110,8 @@ auto f1()
 {
 	if constexpr (my_constexpr_fun() == 1)
 		return 1;
-	return 2; // compile error
+		
+	return 2.0; // compile error
 }
 
 auto f2()
@@ -123,8 +124,89 @@ auto f2()
 		return 3L;
 }
 ```
+
+# is_constant_evaluated()
+- 현재 함수가 컴파일 타임에 평가 가능한지 체크하는 유틸리티
+```cpp
+#include <type_traits>
+
+constexpr int f(int n)
+{
+	if (std:is_constant_evaluated())
+		return 0;
+	return 4;
+}
+
+f(3); // 0
+
+int v = 3;
+f(v); // 4
+```
+
+# if consteval
+- since C++23
+- `std::is_constant_evaluated()`의 문제점 해결
+	- `constexpr` 함수에서 런타임 매개변수를 이용해 `consteval` 함수를 사용할 수 없다.
+	- `if constexpr (std::is_constant_evaluated())`가 항상 참으로 평가된다.
+```cpp
+// #1
+consteval int g(int n) { return n * 3; }
+
+constexpr int f(int n)
+{
+	if (std::is_constant_evaluated())
+		return g(n); // compile error
+	return 4;
+}
+
+// Solve
+constexpr int f(int n)
+{
+	if consteval
+	{
+		return g(n);
+	}
+
+	return 4;
+}
+
+constexpr int v = f(3); // 9
+int v2 = f(3); // 4
+
+// #2
+constexpr int f(int x)
+{
+	// 아래 조건은 항상 참이다.
+	if constexpr (std::is_constant_evaluated())
+		return 3;
+
+	return 4;
+}
+
+constexpr int v = f(3); // 3
+int v2 = f(3); // 3
+
+// Solve
+constexpr int f(int x)
+{
+	if consteval
+	{
+		return 3;
+	}
+
+	return 4;
+}
+
+constexpr int v = f(3); // 3
+int v2 = f(3); // 4
+```
+	
+```
+```
+
 # 참고자료
 - https://en.cppreference.com/w/cpp/language/consteval
 - https://en.cppreference.com/w/cpp/language/constinit
 - https://en.cppreference.com/w/cpp/language/constexpr
 - https://en.cppreference.com/w/cpp/language/if
+- https://en.cppreference.com/w/cpp/types/is_constant_evaluated
