--- a/TinyStudy-CPP-5장/37. static_cast, const_cast, reinterpret_cast.md
+++ b/TinyStudy-CPP-5장/37. static_cast, const_cast, reinterpret_cast.md
@@ -24,9 +24,9 @@ cout << b[0]; // 1이 아닌 포인터 값이 출력된다.(의도하지 않은 
 ```cpp
 const int num = 10;
 const int* ptr = &num;
-// *ptr = 20 // 컴파일 에러
+// *ptr = 20; // 컴파일 에러
 int* ptr1 = const_cast<int*>(ptr);
-ptr1 = 20;
+*ptr1 = 20;
 ```
 
 
