--- a/choiseonmun-tinycpp/Ch5 - Memory Concepts/10. Explicit Type Conversion.md
+++ b/choiseonmun-tinycpp/Ch5 - Memory Concepts/10. Explicit Type Conversion.md
@@ -34,7 +34,61 @@ int (&b)[2][6] = reinterpret_cast<int(&)[2][6]>(a);
 int (*c)[6] = reinterpret_cast<int(*)[6]>(a);
 ```
 
+# Type Punning
+- 서로 다른 2개의 포인터가 같은 공간을 가리킬 때, 한 포인터는 다른 포인터를 가칭(alise)할 수 있다. 이를 **포인터 가칭**(포인터 에일리어싱; Pointer Aliasing)이라 한다.
+- 일반적인 언어의 범위 내에서 달성하기 어렵거나 불가능한 것을 달성하고자 언어의 타입 시스템을 피하는 것을 **타입 장난**(Type Punning)이라 한다.
+- 컴파일러는 <span style="background:#d3f8b6">엄격한 가칭 규칙을 위반하지 않는다</span>고 가정한다. 따라서 코드 정적 분석 도구를 쓰지 않는 한 찾기가 매우 어렵다.
+	- 원본과 다른 타입으로 값에 접근하는 것은 허용되지 않으며, 이는 미정의된 동작으로 분류한다.
+	- GCC의 경우 `-Wstrict-aliasing` 옵션으로 활성화 할 수 있으며, VS는 제공하지 않는다.
+```cpp
+// 아래의 코드는 분기로 인해 CPU 파이프라인이 깨진다.
+float abs(float x)
+{
+	return (x < 0.0f) ? -x : x;
+}
+
+// 이를 손수 최적화한다.
+float abs(float x)
+{
+	// 아래 코드는 미정의된 동작이다.
+	// 자세한 건 아래의 링크를 참고한다.
+	// https://rules.sonarsource.com/cpp/RSPEC-5275/?search=%22reinterpret_cast%22%20should%20be%20used%20carefully
+	unsigned uvalue = reinterpret_cast<unsigned&>(x);
+	unsigned tmp = uvalue & 0x7FFFFFFF;
+
+	// 마찬가지로 아래의 코드는 미정의된 동작을 야기한다.
+	return reinterpret_cast<float&>(tmp); 
+}
+```
+
+- 컴파일러 대신 SonarLint가 잡아줬다.
+![[type punning.png]]
+
+```cpp
+// 올바르게 하려면 std::memcpy()를 사용한다.
+float abs(float x)
+{
+	unsigned uvalue;
+	std::memcpy(&uvalue, &x, sizeof(float));
+	unsigned temp = uvalue & 0x7FFFFFFF;
+
+	float result;
+	std::memcpy(&result, &temp, sizeof(result));
+
+	return result;
+}
+
+// 혹은 std::bit_cast를 사용할 수 있다.(C++20)
+float abs(float x)
+{
+    unsigned uvalue = std::bit_cast<unsigned>(x);
+    unsigned temp = uvalue & 0x7FFFFFFF;
+    return std::bit_cast<float>(temp);
+}
+```
 # 참고자료
 - https://en.cppreference.com/w/cpp/language/static_cast
 - https://en.cppreference.com/w/cpp/language/const_cast
 - https://en.cppreference.com/w/cpp/language/reinterpret_cast
+- https://rules.sonarsource.com/cpp/RSPEC-5275/?search=%22reinterpret_cast%22%20should%20be%20used%20carefully
+- https://en.cppreference.com/w/cpp/numeric/bit_cast
