Function Signature and OVerlading and =delete 공부 및 수정

--- a/TinyStudy-CPP-5장/39. sizeof Operator.md
+++ b/TinyStudy-CPP-5장/39. sizeof Operator.md
@@ -68,13 +68,10 @@ char a = ' ';
 cout << sizeof(a); // print 1
 ```
 
-* 크기가 0인 배열이나, 크기가 0인 구조체의 배열은 1을 반환한다. 
+* 크기가 0인 구조체의 배열은 1을 반환한다.
 ```cpp
 struct A{};
 sizeof(A); // 1 반환
-
-A array1[10];
-sizeof(array1); // 1 반환
 ```
 
 #### sizeof and Size of a Byte
