--- a/TinyStudy-CPP-6장/40. Pass by Value, Pass by Pointer and Pass by Reference.md
+++ b/TinyStudy-CPP-6장/40. Pass by Value, Pass by Pointer and Pass by Reference.md
@@ -21,7 +21,7 @@ f(3, "ABC"); // 3, "ABC"가 argument
 
 - 지향할 사용처
 	- 원시타입(`int`, `float` ... )
-	- 크기가 작은 객체
+	- 크기가 작은 객체 (`2 * sizeof(void*)보다 작은 크기의 객체. 64-bit OS = 16 byte`)
 
 - 지양할 사용처
 	- 크기가 큰 객체
@@ -69,7 +69,7 @@ foo(array);
 	* 값을 참조하기 때문에 argument에 변경을 줄 수 있다. (장점이자 단점..?, 값을 변경하면 안 될 때는 const를 붙이자.)
 
 * 지향할 사용처
-	* 쌩 포인터가 아닌 모든 케이스..?
+	* 기본 포인터가 아닌 모든 케이스
 
 * 지양할 사용처
 	* Pass by Value 를 사용해도 되는 곳.(Pass by value가 원시타입, 작은 객체의 전달에 있어서는 더 성능이 좋고 가독성있음.)
