--- a/choihuiji-tinycpp/Ch5-Memory Management/Constants, Literals, const, constexpr, consteval, constinit/3. consteval, constinit, if constexpr.md
+++ b/choihuiji-tinycpp/Ch5-Memory Management/Constants, Literals, const, constexpr, consteval, constinit/3. consteval, constinit, if constexpr.md
@@ -54,3 +54,58 @@ auto f1() {
 // return 2.0; 컴파일 에러
 }
 ```
+## std::is_constant_evaluated()
+C++20에서는 실행중인 코드가 컴파일 타임에 평가되는지, 런타임에 평가되는지 검사할 수 있는 std::is_constant_evaluated() 유틸리티를 제공한다.
+```
+#include <iostream>  
+#include <type_traits> // std::is_constant_evaluated  
+  
+constexpr int f(int n) {  
+    if (std::is_constant_evaluated())  
+        return 0;  
+    return 4;  
+}  
+  
+int main() {  
+    constexpr int result = f(3); // 컴파일 시간에 평가  
+    std::cout << result; // 0 출력  
+    int n = 4;  
+    std::cout << f(n); // 4 출력  
+}
+```
+## if consteval
+std::is_constant_evaluated()는 두가지 문제점을 가지고 있는데, C++23에서 if consteval로 해결할 수 있다.
+1. constexpr 함수 내에서 런타임에 결정되는 매개변수와 함께 consteval 함수 호출 불가
+```
+consteval int g(int n) { return n * 3; }  
+constexpr int f(int n) {  
+    if (std::is_constant_evaluated()) // 'if consteval'이 있다면 이는 작동함  
+        return g(n); // 컴파일 에러  
+    return 4;  
+}
+```
+2. if constexpr문과 함께 사용할 때 오용 방지
+```
+constexpr int f(int x) {  
+    if constexpr (std::is_constant_evaluated()) // 함상 참으로 평가되는 에러 발생
+        return 3;  
+    return 4;  
+}  
+  
+constexpr int g(int x) {  
+    if consteval {  
+        return 3;  
+    }  
+    return 4;  
+}  
+  
+int main() {  
+    constexpr int result = f(3);  
+    int result2 = f(3);  
+    std::cout << result << result2; // result: 3, result2: 3   
+    
+    constexpr int result3 = g(3);  
+    int result4 = g(3);  
+    std::cout << result3 << result4; // result3: 3, result4: 4  
+}
+```
