37일차 업데이트

--- a/choihuiji-tinycpp/Ch5-Memory Management/Explicit Type Conversion/1. static_cast, const_cast, reintepret_cast.md
+++ b/choihuiji-tinycpp/Ch5-Memory Management/Explicit Type Conversion/1. static_cast, const_cast, reintepret_cast.md
@@ -7,7 +7,7 @@
 	- const_cast
 		- const나 volatile 속성을 제거하거나 추가하는데 사용될 수 있음
 	- reinterpret_cast
-		- 포인터나 참조의 비트를 그대로 다른 포인터나 참조로 변환
+		- 포인터나 참조의 비트 패턴을 그대로 다른 포인터나 참조로 변환
 		- reinterpret_cast<T*>(v)는 (T*)v와 같음
 		- reinterpret_cast<T&>(v)는 ((T)&v)와 같음
 - 참고
@@ -30,3 +30,24 @@ const_cast<int&>(a) = 3; // 가능하지만 정의되지 않은 행동
 std::cout << a; // 5
 ```
 ### 3. Reinterpret Cast
+```
+float b = 3.0f;  
+// bit representation of b: 01000000010000000000000000000000  
+int c = reinterpret_cast<int &>(b);  
+// bit representation of c: 01000000010000000000000000000000 => 1077936128
+```
+
+```
+int *ptr = new int;  
+//int x1 = static_cast<size_t>(ptr); // 컴파일 에러, 정수와 포인터 간의 타입 변환은 안전하지 않음  
+int x2 = reinterpret_cast<size_t>(ptr); // ok, 같은 크기
+
+unsigned v;
+//int x3 = reinterpret_cast<int>(v); // reinterpret_cast는 참조나 포인터간의 변환에 사용되므로 기본 타입 변수를 변환하려고 하면 컴파일 에러 발생
+```
+
+```
+int a[3][4];  
+int (&b)[2][6] = reinterpret_cast<int (&)[2][6]>(a); //a의 메모리를 2열 6행으로 재해석
+int (*c)[6] = reinterpret_cast<int (*)[6]>(a); a에 연속적으로 배치된 메모리를 int[6]으로 재해석
+```
