--- a/TinyStudy-CPP-6장/44. Capture List(Lambda Expression).md
+++ b/TinyStudy-CPP-6장/44. Capture List(Lambda Expression).md
@@ -2,8 +2,10 @@
 ### Lambda Expression
 ---
 
-**람다 표현식** : 인라인 지역 범위 함수 객체(?). 람다는 표현식일 뿐이고, 런타임에 존재하지 않는다.
+**람다 표현식** : 인라인 지역 범위 함수 객체. 람다는 표현식일 뿐이고, 런타임에 존재하지 않는다.
+
 다음과 같이 표현한다.
+
 `1. auto x = [capture clause] (parameter) {body}`
 `2. auto x = [capture clause] (parameter)->return type {body}`
 
