--- a/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/1. Functions.md
+++ b/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/1. Functions.md
@@ -5,3 +5,17 @@
 	- Pass by Reference
 		- 원시 포인터 제외한 모든 케이스에 사용 권장
 		- 내장 타입 혹은 단순 복사 가능(trivially copyable)한 작은 객체의 경우에는 권장하지 않음. Pass by value를 쓰는 것이 성능에 이점을 줄 수 있음.
+- 오버로딩 해석 규칙 순서
+	- 정확한 매치
+	- 승격
+	- 표준 타입 변환
+	- 생성자 혹은 사용자 정의 타입 변환
+- `=delete`로 오버로딩 금지 가능(C++11)
+```cpp
+#include <cstddef>
+
+void f(int*) { }
+void f(std::nullptr_t) = delete;
+
+f(nullptr); // compile error
+```
