--- a/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/1. Functions.md
+++ b/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/1. Functions.md
@@ -19,3 +19,15 @@ void f(std::nullptr_t) = delete;
 
 f(nullptr); // compile error
 ```
+
+# 함수 특성
+- 함수의 의도를 더 정확하게 표현하기 위해 사용
+- 종류
+	- `[[noreturn]]` : 이 함수는 반환하지 않는다. (since C++11)
+	- `[[deprecated]]`, `[[deprecated("reason")]]` : 함수를 더이상 사용하지 않도록 지시하며, 컴파일 경고가 뜬다. (since C++14)
+	- `[[nodiscard]]`(since C++17), `[[nodiscard("reason")]]`(since C++20) : 함수의 반환 값을 사용하지 않을 시 컴파일 경고 생성
+	- `[[maybe_unused]]` : 사용하지 않는 개체에 대한 컴파일 경고 무시(since C++17)
+
+# 참고자료
+- https://en.cppreference.com/w/cpp/language/function
+- https://en.cppreference.com/w/cpp/language/attributes
