--- a/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/3. Lambda Expressions.md
+++ b/choiseonmun-tinycpp/Ch6 - Functions and Preprocessing/3. Lambda Expressions.md
@@ -6,3 +6,43 @@ array<int, 5> arr = { 10, 12, 5, 7, 3 };
 
 cout << all_of(arr.begin(), arr.end(), [](auto elem) { return elem >= LIMIT; });
 ```
+- C++14부터는 파라미터의 타입을 자동으로 추론하거나, 초기화할 수 있다.
+- 람다 표현식끼리 합성할 수 있다.
+```cpp
+auto lambda1 = [](int value) { return value + 4; };
+auto lambda2 = [](int value) { return value * 2; };
+
+auto lambda3 = [&](int value) { return lambda2(lambda1(value)); };
+```
+- 람다를 반환할 수 있다.
+	- 이를 이용해 동적 디스패치를 할 수 있다.
+```cpp
+#include <iostream>
+#include <algorithm>
+#include <array>
+
+using namespace std;
+
+auto f() { return [](int lhs, int rhs) { return lhs < rhs; }; }
+
+int main()
+{
+    array<int, 5> arr = { 5, 3, 2, 4, 1 };
+    sort(arr.begin(), arr.end(), f());
+}
+```
+- C++17부터는 `constexpr`을 지원한다.
+- C++20부터는 `consteval`을 지원한다.
+```cpp
+auto factorial = [](int value) constexpr {
+	int ret = 1;
+	for (int i = 2; i <= value; ++i)
+		ret *= i;
+
+	return ret;
+};
+
+auto mul = [](int v) consteval { return v * 2; };
+
+constexpr int v1 = factorial(4) + mul(5);
+```
