43일차 업데이트

--- a/choihuiji-tinycpp/Ch6-Functions and Preprocessing/4. Function Pointers and Function Objects.md
+++ b/choihuiji-tinycpp/Ch6-Functions and Preprocessing/4. Function Pointers and Function Objects.md
@@ -9,4 +9,5 @@
 함수 객체는 호출 가능한 객체로서, 매개변수로 취급될 수 있다.
 - 장점
 	- 인자 유형 검사가 가능. 템플릿이 포함될 수 있음
-	- 
+	- 컴파일러는 함수 객체(operator())를 사용할 때 그 기능을 직접 코드 안에 삽입. 이것을 인라이닝이라고 함. 이 방법은 추가적인 작업을 줄여주어 성능을 높여줌
+	- C++11은 람다 표현식이라는 더 간단한 함수 객체를 제공하여, 코드를 더 간결하게 만
