class hierarchy and access specifier 공부

--- a/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/1. RAII Idiom.md
+++ b/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/1. RAII Idiom.md
@@ -25,7 +25,7 @@
 	3. 자원은 객체의 소멸자가 호출됨과 함께 해제되어야 한다.
 
 - RAII의 예시
-	- `std::vector<T>` : 자원의 동적 할당과 해제를 객체가 담당하고 있다.
+	- `std::vector<T>` : 자원의 동적 할당과 해제를 `vector`가 담당하고 있다.
 	- 스마트 포인터(`std::unique_ptr`, `shared_ptr`) : 스마트 포인터가 자원을 소유하고 있고, 다른 포인터에 의해 소유되는 것을 막는다. 또한 자원은 스마트 포인터가 파괴될 시 같이 해제된다.
 
 
