--- a/joojinsoo-tinycpp/Ch6. Object-Oriendted Programming I - Class Concepts/6-1. RAII Idiom.md
+++ b/joojinsoo-tinycpp/Ch6. Object-Oriendted Programming I - Class Concepts/6-1. RAII Idiom.md
@@ -26,7 +26,7 @@
 
 ## 예시
 ```cpp
-// ================================= FileHandler
+// ================================= FileHandler.cpp
 
 #include <fstream>
 #include <iostream>
@@ -61,7 +61,7 @@ public:
     }
 };
 
-// ================================= main
+// ================================= main.cpp
 int main() {
     try {
         FileHandler fh("example.txt");  // 파일을 열고 자원을 초기화
@@ -73,4 +73,11 @@ int main() {
     // 프로그램이 여기서 종료될 때, `fh`의 소멸자가 자동으로 호출되어 파일을 닫는다.
     return 0;
 }
+```
+
+```cpp
+// 결과
+File opened successfully.
+Data written successfully.
+File closed.
 ```
