copy constructor 추가 자료

--- a/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/5. Copy Constructor, Class Destructor.md
+++ b/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/5. Copy Constructor, Class Destructor.md
@@ -8,6 +8,7 @@
 - 특징
 	- 모든 클래스에는 암시적, 명시적 혹은 삭제된 복사 생성자가 있다.
 	- 복사 생성자는 암시적으로 부모 클래스의 기본 생성자를 호출한다. (사용자 지정 복사 생성자인 경우에도 호출한다.)
+	- 복사 생성자는 탬플릿 파라미터를 가지지 않는다.(`A(const A<T>&)`X --> `A(const A&)`O)
 	- 복사 생성자와 `=`연산자 호출은 다르다.
 
 ```cpp
@@ -109,3 +110,7 @@ int main() {
 }
 ```
 
+
+참고자료
+
+[c++ - Copy constructor of a template class - Stack Overflow](https://stackoverflow.com/questions/19167201/copy-constructor-of-a-template-class)
