default, this, static 공부, const, mutable~ 공부

--- a/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/6. default, this, static.md
+++ b/2차(객체지향, 일반화 프로그래밍)/TinyStudy-CPP-7장/6. default, this, static.md
@@ -60,3 +60,24 @@ struct A {
 ---
 
 - `static` 키워드로 선언된 맴버는 한 객체가 아니라 클래스의 모든 객체가 공유하도록 한다.
+
+- 정적 상수 멤버(`static const`)를 선언과 동시에 초기화 할 수 있지만, 부동소수점형은 불가능하다.
+- 상수가 아닌 정적 멤버는 선언과 동시에 초기화 할 수 없다. C++17에서는 `inline` 키워드로 초기화 할 수 있다.
+- `static`멤버 함수에서는 비정적 변수를 사용할 수 없다.
+- 반대로 비정적 멤버 함수에서는 `static` 변수를 사용할 수 있다.
+
+```cpp
+struct A {
+	static const int i = 1;
+	// static const float f = 1.3f;
+	static int a;
+
+	static const int g() { return 1; }
+};
+int A::a = 2;
+
+int main() {
+	A a1;
+	cout << a1.a << A::i; // print 21
+}
+```
