Operator Overloading 공부

--- a/1차/TinyStudy-CPP-6장/41. Function Signature and Overloading, Overloading and =delete.md
+++ b/1차/TinyStudy-CPP-6장/41. Function Signature and Overloading, Overloading and =delete.md
@@ -1,6 +1,5 @@
 
-### Function Signature and Overloading
----
+ Function Signature and Overloading
 
 - **함수 시그니처** : 함수의 입력과 출력 형식을 정의한 것으로, 함수 argument의 타입, 수, 순서도 포함된다.
 
@@ -23,18 +22,9 @@ f2(a); // 컴파일 에러 : 같은 함수가 두 개임.
 	1. 파라미터와 같은 타입을 매치시켜야 한다.
 	2. 승격(promotion)이 가능하다.
 	3. 표준 형변환을 따른다.
-```cpp
-void f(int a) {}
-void f(float b) {}
-void f(float b, char c) {}
 
-f(0); 
-f('a'); // char -> int 승격
-// f(3LL); // 애매함. f(int a)와 f(float b) 둘 다 가능
-f(2.3f);
-// f(2.3); // 애매함. f(int a)와 f(float b) 둘 다 가능
-f(2.3, 'a'); // 표준 형변환
-```
+
+
 
 
 ### Overloading and `=delete`
