--- a/joojinsoo-tinycpp/Ch9. Templates and Meta-programming I - Function Templates and Compile-Time Utilities/1. Function Template/9-4. Template Variable | Template Parameter Types.md
+++ b/joojinsoo-tinycpp/Ch9. Templates and Meta-programming I - Function Templates and Compile-Time Utilities/1. Function Template/9-4. Template Variable | Template Parameter Types.md
@@ -22,12 +22,12 @@ T circular_area(T r) {
 int main() {
     std::cout << "Area with float radius: " << circular_area(3.3f) << std::endl; // float 타입
     std::cout << "Area with double radius: " << circular_area(3.3) << std::endl; // double 타입
-    // std::cout << "Area with int radius: " << circular_area(3) << std::endl; // 컴파일 오류, 좁은 범위 변환(narrowing conversion) 발생
+    // std::cout << "Area with int radius: " << circular_area(3) << std::endl; // 컴파일 오류, 축소 범위 변환(narrowing conversion) 발생
     return 0;
 }
 ```
 
-### 좁은 범위 변환 (Narrowing Conversion)
+### 축소 범위 변환 (Narrowing Conversion)
 - 좁은 범위 변환이란 데이터 타입을 변환할 때 데이터의 손실이 발생할 수 있는 경우를 말함.
     - 예를 들어, 부동 소수점 타입을 정수 타입으로 변환하면 소수점 이하의 값이 손실될 수 있다.
 - C++에서는 이러한 잠재적 데이터 손실을 방지하기 위해 좁은 범위 변환을 컴파일 오류로 처리함.
