--- a/2차(객체지향, 일반화 프로그래밍)/10장-Templates and Meta-Programming2/SFINAE/29. SFINAE Overview.md
+++ b/2차(객체지향, 일반화 프로그래밍)/10장-Templates and Meta-Programming2/SFINAE/29. SFINAE Overview.md
@@ -26,6 +26,7 @@ cout << negate(42); // -42
 ### `std::enable_if` Type Trait
 ---
 
+- `std::enable_if`는 함수/클래스 탬플릿 인스턴스화를 조건부로 활성화/비활성화할 수 있도록 한다.
 - 사용자가 원하는 타입만을 안전하게 오버로드 하기 위해 함수 선언부에 `std::enable_if`를 사용해 타입 치환 오류를 발생시킬 수 있다.
 - 아래와 같이 정의될 수 있다.
 ```cpp
@@ -56,7 +57,7 @@ int main()
 	int a = 10;
 	do_stuff(a);
 	float b = 12.2f;
-	// do_stuff(b); // compile error: 
+	// do_stuff(b); // compile error
 }
 ```
 
